[package]
name = "clap-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = "0.12.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
